# n8n-workflow-builder

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  EXAMPLES.md  FINAL_SUCCESS_TEST.md  MIGRATION_TEST.md  QUICKSTART.md  README.md  SECURITY_REVIEW.md  docker-compose.yml  pyproject.toml  server.py  test_connection.py  test_fts5_match.py  test_github_templates.py  test_search_github.py
docs/: AI_FEEDBACK.md  BUG_FIX_FTS5_DUPLICATES.md  DRIFT_DETECTION.md  DYNAMIC_TEMPLATES.md  EXAMPLES.md  MIGRATION.md  NODE_DISCOVERY.md  QUICKSTART.md  RBAC_SECURITY.md  STATE_MANAGEMENT.md  TESTING_GUIDE.md  TOOLS.md  VALIDATION.md  state_example.json  validation_example.json
examples/: 01_simple_api_endpoint.json  02_scheduled_report.json  03_data_validation_api.json  PROMPTS.md  README.md
releases/: v1.0.0.md  v1.1.0.md  v1.10.0.md  v1.11.0.md  v1.11.1.md  v1.12.0.md  v1.12.1.md  v1.13.0.md  v1.13.1.md  v1.13.2.md  v1.14.0.md  v1.14.1.md  v1.15.0.md  v1.16.0.md  v1.16.1.md  v1.17.0.md  v1.17.1.md  v1.18.0.md  v1.18.1.md  v1.19.0.md  v1.2.0.md  v1.20.0.md  v1.21.0.md  v1.22.0.md  v1.22.1.md  v1.23.0.md  v1.23.1.md  v1.23.2.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.7.1.md  v1.8.0.md  v1.8.1.md  v1.8.2.md  v1.9.0.md  v1.9.1.md  v1.9.2.md
scripts/: README.md
scripts/debug/: debug_fts5.py  inspect_fts5_tokens.py
scripts/utils/: add_intent_tools.py  intent_tools.py  rebuild_fts5.py
src/n8n_workflow_builder/: client.py  (+8 more)
tests/: README.md  test_connection.py  test_final_verification.py  test_semantic_analysis.py  test_template_recommendations.py
(+88 files in other folders)
